svc/connectinmesh/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  hosts:
    - 36d11c7981c1.ngrok.io
  location: MESH_EXTERNAL
  ports:
    - number: 443
      name: https
      protocol: TLS
  resolution: DNS
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: connectinmesh-external
spec:
  hosts:
    - connectinmeshexternal.nid.svc.cluster.local
  http:
    - name: connectinmeshexternal
      route:
        - destination:
            host: 36d11c7981c1.ngrok.io
